--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "benleahproject",
-  "version": "1.0.0",
+  "name": "repres",
+  "version": "0.0.1",
   "description": "project 3",
   "main": "gulpfile.js",
   "scripts": {
@@ -11,12 +11,19 @@
     "url": "git+https://github.com/LeahNelson/BenLeahProject.git"
   },
   "author": "ben and leah",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/LeahNelson/BenLeahProject/issues"
   },
   "homepage": "https://github.com/LeahNelson/BenLeahProject#readme",
   "dependencies": {
     "gulp": "^3.9.1"
+  },
+  "keywords": [
+    "project",
+    "3"
+  ],
+  "devDependencies": {
+    "gulp-less": "^3.1.0"
   }
 }
